[Fix JENKINS-13195] New Breadcrumb bar covers search suggestions Adjust z-index for #search-box-completion to appear over the breadcrumb

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -877,7 +877,7 @@ DIV.yahooTree td {
   text-align: left;
   width:25em;
   position: absolute;
-  z-index: 999;
+  z-index: 1000;
 }
 
 #search-box-completion .yui-ac-content {
